fix: correct asset paths for CSS/JS/images
- Updated index.html to use assets/css/style.css
- Updated image paths to assets/images/*
- Linked assets/js/main.js with defer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Hoja de Estilos Propia -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
@@ -41,7 +41,7 @@
     <header id="header">
         <div class="container header-container">
             <a href="#" class="logo">
-                <img src="images/logo.png" alt="Ivan Tech Coach Logo">
+                <img src="assets/images/logo.png" alt="Ivan Tech Coach Logo">
                 <span class="logo-text">Ivan Tech Coach</span>
             </a>
             <nav>
@@ -80,7 +80,7 @@
     <section id="about" class="about">
         <div class="container about-container">
             <div class="about-image">
-                <img src="images/profile.png" alt="Ivan Tech Coach - Perfil">
+                <img src="assets/images/profile.png" alt="Ivan Tech Coach - Perfil">
             </div>
             <div class="about-content">
                 <h2 class="section-title">Sobre Mí</h2>
@@ -207,7 +207,7 @@
     </footer>
 
     <!-- JavaScript - `defer` asegura que el script se ejecute después de que el HTML ha sido analizado -->
-    <script src="js/main.js" defer></script>
+    <script src="assets/js/main.js" defer></script>
 
 </body>
 </html>
